@@ -6,6 +6,10 @@ define t2t_docsys_txt
   $(T2T_DOCSYS_ROOT)txt2tags.py -t txt --no-toc --no-enum-title -o $1 ${3:%=-C $(T2T_DOCSYS_ROOT)t2t_docsys_%.conf} $2
 endef
 
+define t2t_docsys_md
+  $(T2T_DOCSYS_ROOT)txt2tags.py -t md --no-toc --no-enum-title -o $1 ${3:%=-C $(T2T_DOCSYS_ROOT)t2t_docsys_%.conf} $2
+endef
+
 define t2t_docsys_html
   $(T2T_DOCSYS_ROOT)txt2tags.py -t html --toc --enum-title -o $1 ${3:%=-C $(T2T_DOCSYS_ROOT)t2t_docsys_%.conf} $2
 endef
@@ -16,4 +20,4 @@ define t2t_docsys_pdf
   pdflatex -interaction=nonstopmode -file-line-error -halt-on-error ${1:.pdf=}.tex
 endef
 
-T2T_DOCSYS_OUTPUT_WILDCARDS = *.aux *.dvi *.html *.log *.pdf *.out *.tex *.toc *.txt
+T2T_DOCSYS_OUTPUT_WILDCARDS = *.aux *.dvi *.html *.log *.md *.pdf *.out *.tex *.toc *.txt
