@@ -1,6 +1,8 @@
 Version 2.6.2-devel
 -------------------
 - Use uppercase for Makefile variables.
+- Further differences against txt2tags version 2.6:
+  - Add simple GitHub Flavoured Markdown support.
 
 
 Version 2.6.1 [8 Jan 2015]
